@@ -14,8 +14,6 @@ module Formtastic
         
         warn_deprecated_option!(:value, ":input_html => { :value => '...'}")
         warn_deprecated_option!(:error_class, "default_error_class configuration")
-        warn_deprecated_option!(:group_by, ":collection option with a HTML string generated by Rails' grouped_options_for_select()")
-        warn_deprecated_option!(:group_label, ":collection option with a HTML string generated by Rails' grouped_options_for_select()")
         warn_deprecated_option!(:find_options, "YourModel.find(...)")
       end
       
@@ -48,7 +46,6 @@ module Formtastic
       autoload :Database
       autoload :Errors
       autoload :Fileish
-      autoload :GroupedCollections
       autoload :Hints
       autoload :Html
       autoload :Labelling
