@@ -93,11 +93,9 @@ module Formtastic
             else
               
               if Util.rails3?
-                find_options_from_options.merge!(:include => group_by) if self.respond_to?(:group_by) && group_by
                 reflection.klass.scoped(scope_conditions).where(find_options_from_options)
               else
                 coll = reflection.klass.where(scope_conditions)
-                coll = coll.includes(group_by) if self.respond_to?(:group_by) && group_by
                 coll.where(find_options_from_options)
               end
             end
