@@ -1,6 +1,8 @@
 master
 
 * Removed deprecated `:hint_class` option
+* Removed deprecated :group_by and :group_label options
+* Removed deprecated `:error_class` option
 
 2.3.0.rc2
 
